fix: docs scribe
Исправил документацию к api.
